# app_black

./: .config.yaml  .gitignore  .pre-commit-config.yaml  .prettierrc  MANIFEST.in  config_script.sh  install_script.py  pyproject.toml
.github/workflows/: publish-to-pypi.yaml
.windsurf/rules/: code-style-guide.md
boneio/: bonecli.py  config.py  const.py  cover.py  manager.py  modbus.py  mqtt_client.py  oled.py  runner.py  version.py
boneio/boards/0.7/: input.yaml  output_24_16.yaml  output_32_10.yaml  output_cover.yaml  output_cover_mix.yaml
boneio/boards/0.8/: cover.yaml  output_32_10.yaml  output_cover.yaml  output_cover_mix.yaml
boneio/cover/: __init__.py  cover.py  previous.py  time_based.py  venetian.py
boneio/example_config/: binary_sensor_v_0_7.yaml  config.yaml  event_v_0_7.yaml  output32x10A.yaml
boneio/example_config/24x16/: config.yaml  event.yaml  mqtt.yaml  output24x16A.yaml
boneio/example_config/32x10/: binary_sensor.yaml  config.yaml  event.yaml  output32x10A.yaml
boneio/example_config/cover/: adc.yaml  binary_sensor.yaml  config.yaml  cover.yaml  event.yaml  outputCover.yaml
boneio/example_config/cover_mix/: config.yaml  cover.yaml  event.yaml  outputCoverMix.yaml
boneio/example_config/different_configs/: all_binary_sensor.yaml  config_24_16.yaml  output24x16A.yaml
boneio/group/: __init__.py  output.py
boneio/helper/: __init__.py  async_updater.py  click_timer.py  config.py  events.py  exceptions.py  filter.py  gpio.py  gpiod.py  ha_discovery.py  interlock.py  loader.py  logger.py  message_bus.py  mqtt.py  pcf8575.py  queue.py  schema_converter.py  state_manager.py  stats.py  util.py  yaml_util.py
boneio/helper/onewire/: W1ThermSensor.py  __init__.py  ds2482.py
boneio/helper/sensor/: ina_219_smbus.py
boneio/input/: gpio.py  gpio_new.py
boneio/message_bus/: __init__.py  basic.py  local.py  mqtt.py
boneio/modbus/: __init__.py  client.py  coordinator.py  cwt.json  fujitsu-ac.json  liquid-sensor.json  modbuscli.py  orno-or-we-517.json  r4dcb08.json  sdm120.json  sdm630.json  sensor.py  sht20.json  single_sensor.py  socomec_e03.json  socomec_e23.json  thessla.json  utils.py  ventclear.json
boneio/modbus/derived/: __init__.py  numeric.py  select.py  switch.py  text.py
boneio/modbus/sensor/: __init__.py  base.py  binary.py  derived.py  numeric.py  text.py
boneio/modbus/writeable/: __init__.py  binary.py  numeric.py
boneio/models/: __init__.py  files.py  logs.py
boneio/relay/: __init__.py  basic.py  gpio.py  mcp.py  pca.py  pcf.py
boneio/schema/: actions.yaml  actions_switch.yaml  schema.yaml  update_interval.yaml
boneio/sensor/: __init__.py  adc.py  gpio.py  gpio_new.py  ina219.py  serial_number.py
boneio/sensor/modbus/: __init__.py  socomec_e23.json
boneio/sensor/temp/: __init__.py  dallas.py  lm75.py
boneio/webui/: app.py  web_server.py  websocket_manager.py
boneio/webui/schema/: adc.schema.json  binary_sensor.schema.json  boneio.schema.json  config.schema.json  cover.schema.json  dallas.schema.json  ds2482.schema.json  event.schema.json  ina219.schema.json  lm75.schema.json  logger.schema.json  mcp23017.schema.json  mcp9808.schema.json  modbus.schema.json  modbus_devices.schema.json  modbus_sensors.schema.json  mqtt.schema.json  oled.schema.json  output.schema.json  output_group.schema.json  pca9685.schema.json  pcf8575.schema.json  sensor.schema.json  web.schema.json
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: schem
frontend/src/: App.css  App.tsx  index.css  main.tsx  themes.js  yaml.worker.ts
frontend/src/api/: axios.ts
frontend/src/components/: ConfigCheckModal.tsx  ConfigEditor.tsx  ConfigEditorUI.tsx  CoverItem.tsx  HelpView.tsx  InputsView.tsx  Layout.tsx  LoadingSpinner.tsx  LogViewer.tsx  LoginView.tsx  Logo.tsx  Navigation.tsx  NotAvailable.tsx  OutputItem.tsx  OutputsView.tsx  SensorView.tsx  Sidebar.tsx  ThemeChanger.tsx  TiltBar.tsx  VenetianSlats.tsx  ViewToggle.tsx
frontend/src/components/UISettings/: ArrayTableWidget.tsx  SectionForm.tsx  SectionHeader.tsx  SectionTabs.tsx  (+1 more)
frontend/src/contexts/: RestartContext.tsx
frontend/src/hooks/: useApiAvailability.ts  useAuth.tsx  useCountdown.ts  useDeviceName.ts  useTheme.ts  useWebSocket.ts
frontend/src/utils/: formatters.ts
modbus_devices/: fujitsu-ac.json  liquid-sensor.json  r4dcb08.json  sdm630.json  sht30.json  socomec_e23.json  thessla.json
src/boneio/: asyncio.py  asyncio_.py  bonecli.py  config.py  const.py  events.py  gpio_manager.py  gpio_manager_mock.py  logger.py  manager.py  oled.py  runner.py  yaml.py
src/boneio/cover/: cover.py  previous.py  time_based.py  venetian.py
src/boneio/gpio/: __init__.py  base.py  gpio_event_button_new.py  gpio_event_button_old.py  gpio_relay.py  gpio_sensor_new.py  gpio_sensor_old.py
src/boneio/gpio_manager/: __init__.py  base.py  gpio_manager.py  mock.py
src/boneio/group/: output.py
src/boneio/helper/: __init__.py  async_updater.py  click_timer.py  events.py  exceptions.py  filter.py  ha_discovery.py  interlock.py  loader.py  logger.py  mqtt.py  oled.py  pcf8575.py  schema_converter.py  state_manager.py  stats.py  util.py  yaml_util.py
src/boneio/message_bus/: __init__.py  basic.py  local.py  mqtt.py
src/boneio/modbus/: client.py  coordinator.py  cwt.json  liquid-sensor.json  modbuscli.py  models.py  r4dcb08.json  sdm120.json  sdm630.json  sensor.py  sht30.json  thessla.json  utils.py
src/boneio/models/: __init__.py  events.py  files.py
src/boneio/relay/: __init__.py  basic.py  mcp.py  mock.py  pca.py  pcf.py
src/boneio/schema/: filters.yaml  schema.yaml  update_interval.yaml
src/boneio/sensor/: __init__.py  adc.py  ina219.py  serial_number.py
src/boneio/webui/: app.py  context_var.py  web_server.py  websocket_manager.py
stubs/gpiod/: __init__.pyi  chip.pyi  chip_info.pyi  edge_event.pyi  exception.pyi  info_event.pyi  line.pyi  line_info.pyi  line_request.pyi  line_settings.pyi
tests/: relay_32_5.py  test_modbus_device_configs.py
(+69 files in other folders)
