[project]
name = "boneio"
description = "Python App for BoneIO"
readme = "README.md"
dynamic = ["version"]
authors = [
    { name = "Paweł Szafer", email = "pszafer@gmail.com" },
]
dependencies = [
    "Adafruit-Blinka @ git+https://github.com/adafruit/Adafruit_Blinka",
    "adafruit-circuitpython-ds18x20==1.4.3",
    "adafruit-circuitpython-mcp230xx==2.5.16",
    "adafruit-circuitpython-mcp9808==3.3.26",
    "adafruit-circuitpython-pct2075==1.1.23",
    "aiomqtt==1.1.0",
    "Cerberus==1.3.7",
    "colorlog==6.9.0",
    "gpio==1.0.0",
    "luma-core==2.4.2",
    "luma-oled==3.13.0",
    "pymodbus==2.5.3",
    "pyserial-asyncio==0.6",
    "PyYAML==6.0.1",
    "psutil==7.0.0",
    "adafruit-circuitpython-onewire==2.0.9",
    "w1thermsensor[async]==2.3.0",
    "adafruit-circuitpython-pca9685==3.4.17",
    "adafruit-circuitpython-pcf8575==1.0.9",
    "adafruit-circuitpython-typing==1.9.5",
    "gpiod==2.3.0",
    "fastapi==0.103.2",
    "pydantic==2.5.3",
    "hypercorn==0.14.4",
    "websockets==11.0.3",
    "python-jose[cryptography]==3.3.0",
    "qrcode==7.4.2"
]
requires-python = ">=3.10"
license = { text = "GNU General Public License v3.0" }

[project.urls]
Homepage = "https://boneio.eu"
Repository = "https://github.com/boneIO-eu/app_bbb"
Documentation = "https://boneio.eu/docs/intro/"
Changelog = "https://github.com/boneIO-eu/app_bbb/releases"

[project.scripts]
boneio = "boneio.bonecli:main"

[tool.pdm]
version = { from = "boneio/version.py" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.11.5",
    "pre-commit>=2.21.0",
    "flake8>=5.0.4",
    "bandit>=1.7.5",
    "setuptools>=67.7.2",
]

[build-system]
requires = ["pdm-pep517", "setuptools>=42", "pybind11"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | pdm/_vendor
  | tests/fixtures
)/
'''

[tool.isort]
profile = "black"
atomic = true
filter_files = true
known_first_party = ["boneio"]

[tool.pdm.scripts]
lint = "pre-commit run --all-files"

[tool.setuptools.extension]
gpio_event = { sources = ["boneio/binding/gpio_event.cpp"], libraries = ["gpiod"] }
