[project]
name = "boneio"
description = "Python App for BoneIO"
readme = "README.md"
version = "0.13"
authors = [{ name = "Paweł Szafer", email = "pszafer@gmail.com" }]
dependencies = [
  "Adafruit-Blinka @ git+https://github.com/tchalupnik/Adafruit_Blinka",
  "adafruit-circuitpython-ds18x20==1.4.6",
  "adafruit-circuitpython-mcp230xx==2.5.18",
  "adafruit-circuitpython-mcp9808==3.3.28",
  "adafruit-circuitpython-pct2075==1.1.25",
  "aiomqtt==2.4.0",
  "Cerberus==1.3.7",
  "colorlog==6.9.0",
  "luma-core==2.5.1",
  "luma-oled==3.14.0",
  "pymodbus==2.5.3",
  "pyserial-asyncio==0.6",
  "PyYAML==6.0.1",
  "psutil==7.1.0",
  "adafruit-circuitpython-onewire==2.0.11",
  "w1thermsensor[async]==2.3.0",
  "adafruit-circuitpython-pca9685==3.4.19",
  "adafruit-circuitpython-pcf8575==1.0.11",
  "adafruit-circuitpython-typing==1.12.2",
  "fastapi==0.117.1",
  "pydantic==2.11.9",
  "hypercorn==0.17.3",
  "websockets==11.0.3",
  "python-jose[cryptography]==3.5.0",
  "qrcode==7.4.2",
  "python-can>=4.6.1",
  "httpx>=0.28.1",
  "gpiod>=2.3.0",
  "typer>=0.19.2",
  "anyio>=4.11.0",
]
requires-python = ">=3.11"
license = { text = "GNU General Public License v3.0" }


[dependency-groups]
dev = [
  "ruff>=0.13.2",
  "ty>=0.0.1a20",
  "pre-commit>=3.8.0",
  "bandit>=1.7.5",
  "pytest>=8.4.2",
  "mypy>=1.18.2",
  "types-python-jose>=3.5.0.20250531",
]

[project.urls]
Homepage = "https://boneio.eu"
Repository = "https://github.com/boneIO-eu/app_bbb"
Documentation = "https://boneio.eu/docs/intro/"
Changelog = "https://github.com/boneIO-eu/app_bbb/releases"

[project.scripts]
boneio = "boneio.bonecli:main"


[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.11"
mypy_path = "stubs"
strict = true

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
    "tests/fixtures",
]
lint.select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "C",      # flake8-comprehensions
    "T",      # Print.
    "I",      # isort
    "G",      # flake8-logging-format-g
    "TID251", # banned-api (TID251)
    "B012",   # break/continue/return in finally blocks.
    "B018",   # useless-expression
    "B006",     # mutable-argument-default
    "ASYNC251", # Don't allow time.sleep in async functions.
    "UP034",    # extraneous-parentheses
    "UP035",    # deprecated-import
    "RUF008",   # mutable-dataclass-default.
    "RET501",   # better return None handling
    "RET502",   # better return None handling
    "SIM201",
    "SIM202",   # simplify comparisons involving not
    "PIE", # flake8-pie
    "DTZ", # flake8-datetimez-dtz
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "YTT", # flake8-2020
]
lint.ignore = [
    "E501", # Line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # Too complex
    "B904", # Require 'raise ... from ...'
]

[tool.ty.src]
include = ["src/boneio"]
